--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "author": "Alejandro Cuartas <cuartasmarin734@gmail.com>",
     "license": "ISC",
     "dependencies": {
+        "@headlessui/react": "^2.0.4",
+        "@heroicons/react": "^2.1.3",
         "axios": "^1.7.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
