--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "@headlessui/react": "^2.0.4",
         "@heroicons/react": "^2.1.3",
         "axios": "^1.7.2",
+        "emoji-picker-react": "^4.9.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.2.1"
